# carvera-cli

./: .gitignore  DEVELOPER.md  README.md  manual_test.py  pyproject.toml
src/carvera_cli/: __init__.py  device_manager.py  files.py  firmware_utils.py  main.py  streams.py  uploader.py  utils.py  xmodem.py
src/carvera_cli/cmd/: config.py  files.py  interactive.py  utils.py
src/carvera_cli/device/: conn.py  manager.py  manager_test.py
src/carvera_cli/streams/: dummy.py  streams.py  usb.py  usb_test.py  wifi.py  wifi_test.py
src/carvera_cli/transport/: download.py  upload.py  utils.py  xmodem.py
